# ml_service

./: .env  Worker.py  dump.rdb  main.py  ml_service.db  pyproject.toml
src/: exceptions.py  exceptions_handler.py
src/api/dependencies/: __init__.py  create_db.py
src/api/endpoints/: authentication.py  biil.py  developer.py  models.py  prediction.py
src/core/: config.py  security.py
src/ml/: preprocess.py
src/models/: MlModels.py  Predictions.py  Transaction.py  User.py
src/repositories/: ModelRepository.py  PredictionRepository.py  Repository.py  UserRepository.py
src/schemas/: auth.py  user.py
src/services/: billing_service.py  prediction_service.py  security_service.py  user_service.py
