[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["Tatiana Maslennikova <tanyamaslennikova24@mail.ru>"]
readme = "README.md"
packages = [{include = "ml_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
aiosqlite = "^0.19.0"
passlib = "^1.7.4"
fastapi = "^0.109.0"
jose = "^1.0.0"
uvicorn = "^0.27.0"
bcrypt = "^4.1.2"
pandas = "^2.2.0"
joblib = "^1.3.2"
scikit-learn = "^1.4.0"
catboost = "^1.2.2"
rq = "^1.15.1"
redis = "^5.0.1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
